--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 [dependencies]
 anyhow = "1.0.100"
 dashmap = "6.1.0"
+oneshot = "0.1.13"
 rand = "0.9.2"
 serde_json = "1.0.149"
 thiserror = "2.0.18"
