--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ oneshot = "0.1.13"
 rand = "0.9.2"
 serde_json = "1.0.149"
 thiserror = "2.0.18"
+tokio = { version = "1.49.0", features = ["fs", "macros", "rt", "rt-multi-thread", "sync", "time"] }
