--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 [dependencies]
 anyhow = "1.0.100"
 argon2 = "0.5.3"
+axum = "0.8.8"
 base64 = "0.22.1"
 bytes = "1.11.1"
 chacha20poly1305 = "0.10.1"
@@ -18,3 +19,6 @@ serde_json = "1.0.149"
 serde_with = "3.16.1"
 thiserror = "2.0.18"
 tokio = { version = "1.49.0", features = ["fs", "macros", "rt", "rt-multi-thread", "sync", "time"] }
+tracing = "0.1.44"
+tracing-appender = "0.2.4"
+tracing-subscriber = "0.3.22"
