--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ bytes = "1.11.1"
 chacha20poly1305 = "0.10.1"
 chrono = { version = "0.4.43", features = ["serde"] }
 dashmap = "6.1.0"
+jwt-simple = { version = "0.12.14", default-features = false, features = ["pure-rust"] }
 oneshot = "0.1.13"
 rand = "0.9.2"
 serde = { version = "1.0.228", features = ["derive"] }
