--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,8 +19,11 @@ oneshot = "0.1.13"
 rand = "0.9.2"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.149"
+serde_yaml = "0.9.34"
 serde_with = "3.16.1"
 sha1 = "0.10.6"
+sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "migrate", "macros", "chrono"] }
+sqlx-db-tester = "0.7.1"
 thiserror = "2.0.18"
 tokio = { version = "1.49.0", features = ["fs", "macros", "rt", "rt-multi-thread", "sync", "time"] }
 tracing = "0.1.44"
