--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,3 +29,5 @@ tokio = { version = "1.49.0", features = ["fs", "macros", "rt", "rt-multi-thread
 tracing = "0.1.44"
 tracing-appender = "0.2.4"
 tracing-subscriber = "0.3.22"
+tokio-util = { version = "0.7.18", features = ["codec"] }
+futures = "0.3.32"
