--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,3 +31,4 @@ tracing-appender = "0.2.4"
 tracing-subscriber = "0.3.22"
 tokio-util = { version = "0.7.18", features = ["codec"] }
 futures = "0.3.32"
+nanoid = "0.4.0"
